# isoku

./: .gitignore  .travis.yml  Cargo.toml  README.md
isoku-macros/: Cargo.toml  rustfmt.toml
isoku-macros/src/: lib.rs
src/: bot.rs  bytes.rs  channel.rs  cursor.rs  events.rs  lib.rs  main.rs  match.rs  token.rs
src/events/: change_action.rs  channel_join.rs  channel_part.rs  lobby_join.rs  lobby_part.rs  logout.rs  mod.rs  send_message.rs  stats_request.rs  status_update.rs
src/events/matches/: change_settings.rs  create.rs  mod.rs
src/http/: mod.rs  request.rs  response.rs
src/osu/: channel.rs  matches.rs  mod.rs  packets.rs  token.rs
src/packets/: encoding.rs  mod.rs  server.rs
src/token/: dummy.rs  mod.rs  player.rs
tests/: events.rs  osu_data.rs  packets.rs  token.rs
