[package]
name = "isoku"
version = "0.1.0"
authors = ["Nikodem Rabuliński <nikodemrabulinski@gmail.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.7.4", features = ["v4"] }
bytes = "0.4.12"
httparse = "1.3.4"
#diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }
enumn = "0.1.0"
r2d2 = "0.8.5"
r2d2_postgres = "0.14.0"

[dev-dependencies]
rand = "0.7.0"
