[package]
name = "isoku"
version = "0.1.0"
authors = ["Nikodem Rabuliński <nikodemrabulinski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^0.2", features = ["rt-threaded", "macros", "rt-core", "rt-util", "sync"] }
hyper = "^0.13.4"
http = "^0.2.1"
uuid = { version = "^0.8.1", features = ["v4"] }
tracing = "^0.1.13"
tracing-futures = "^0.2.3"
tracing-subscriber = { version = "^0.2.3", features = ["fmt"] }
sqlx = { version = "^0.3", default-features = false, features = ["runtime-tokio", "macros", "postgres"] }
futures = "^0.3"
dotenv = "0.15"
isoku-macros = { path = "./isoku-macros" }
uncho-common = { git = "https://github.com/nrabulinski/uncho" }
async-trait = "0.1"
lazy_static = "1.4"

[dev-dependencies]
rand = "0.7"
lazy_static = "1.4"